# dg_blmc_robots

./: .gitignore  CMakeLists.txt  Doxyfile.in  package.xml  readme.md  setup.py
demos/: .dg_teststand_impedance.py.swp  CMakeLists.txt  demo_dg_quadruped.cpp  demo_dg_quadruped_simu.cpp  demo_dg_single_motor.cpp  demo_dg_single_motor.py  demo_dg_stuggihop.cpp  demo_dg_test_bench.cpp  demo_dg_test_bench_8_motors.cpp  demo_dg_test_bench_8_motors_simu.cpp  demo_dg_teststand.cpp  demo_quadruped_squatting.py  demo_read_file.py  demo_teststand_squatting.py  dg_quadruped_sim_basic.py  dg_quadruped_squatting.py  dg_single_motor_cogging_identify.py  dg_singlemotor_cogging.py  dg_teststand_impedance.py  dg_teststand_simple_angle.py  dg_teststand_sine_motion.py  dg_teststand_squatting.py  hopper_1d.urdf
demos/config/: quadruped.yaml  quadruped_simu.yaml  single_motor.yaml  stuggihop.yaml  test_bench.yaml  test_bench_8_motors.yaml  test_bench_8_motors_simu.yaml  teststand.yaml
demos/quadruped/: .dg_quad_impedance.py.swp  dg_cogging_identification.py  dg_quad_bounding.py  dg_quad_calib2pd.py  dg_quad_com_ctrl.py  dg_quad_com_lqr_planned_motion.py  dg_quad_com_planned_motion.py  dg_quad_com_wbc.py  dg_quad_fall_recovery.py  dg_quad_go_to.py  dg_quad_impedance.py  dg_quad_leg_impedance.py  dg_quad_lqr_planned_motion.py  dg_quad_pd_jump.py  dg_quad_planck_balance.py  dg_quad_planned_joint_task_control.py  dg_quad_planned_motion.py  dg_quad_planned_motion_debug.py  dg_quad_reactive_lqr.py  dg_quad_sab_demos.py  dg_quad_sim_invdyn.py  dg_quad_sine_motion.py  dg_quad_stationary_bound.py  dg_quad_stationary_bound2.py  dg_quad_streching.py  dg_quadruped_calib2zero.py  dg_quadruped_sim_basic.py  quad_simu.py
demos/quadruped/simulations/: dg_quad_simu_bounding.py  dg_quad_simu_calib2pd.py  dg_quad_simu_calib2zero.py  dg_quad_simu_calibration.py  dg_quad_simu_climb_obstacle.py  dg_quad_simu_com_ctrl.py  dg_quad_simu_com_lqr_planned_motion.py  dg_quad_simu_go_to.py  dg_quad_simu_impedance.py  dg_quad_simu_joint_task_control.py  dg_quad_simu_lqr_planned_motion.py  dg_quad_simu_planned_motion.py  dg_quad_simu_sinemotion.py  dg_quad_simu_wbc.py
demos/stuggihop/simulations/: dg_stuggihop_simu_basic.py  dg_stuggihop_simu_impedance.py  dg_stuggihop_simu_open_loop.py
demos/test_bench_8_motors/: demo_dg_test_bench_8_motors.cpp  demo_dg_test_bench_8_motors_simu.cpp  test_bench_8_motors.yaml
demos/teststand/: dg_impedance.py  dg_impedance_teststand.py  dg_test_sim_pd.py  dg_teststand_calib2zero.py  dg_teststand_circle.py  dg_teststand_com_planned_motion.py  dg_teststand_joint_oscillation.py  dg_teststand_jump.py  dg_teststand_new_jump.py  dg_teststand_planned_motion.py  dg_teststand_powerjump.py  dg_teststand_simu_com_planned_motion.py  dg_teststand_simu_impedance.py  dg_teststand_simu_planned_motion.py  dg_teststand_simu_powerjump.py  dg_teststand_simu_stiffness_measurement.py  dg_teststand_stiffness_measurement.py
demos/teststand/simulations/: dg_teststand_impedance_new.py  dg_teststand_simu_calib2zero.py  dg_teststand_simu_impedance.py  dg_teststand_simu_jump.py  dg_teststand_simu_powerjump.py
include/dg_blmc_robots/: common_header.hpp  dgm_quadruped.hpp  dgm_quadruped_simu.hpp  dgm_single_motor.hpp  dgm_solo.hpp  dgm_solo12.hpp  dgm_solo8.hpp  dgm_solo8ti.hpp  dgm_solo_simple_simu.hpp  dgm_stuggihop.hpp  dgm_test_bench.hpp  dgm_test_bench_8_motors.hpp  dgm_test_bench_8_motors_simu.hpp  dgm_teststand.hpp
include/dg_blmc_robots/test_bench_8_motors/: dgm_test_bench_8_motors.hh  dgm_test_bench_8_motors_simu.hh
launch/: quadruped.launch  quadruped_bringup.launch  quadruped_rviz.launch
nodes/teststand/: teststand_calibration
python/dg_blmc_robots/: vicon_client_bullet.py
python/dg_blmc_robots/bolt/: bolt_base_bullet.py  bolt_bullet.py
python/dg_blmc_robots/deprecated/: dg_singlemotor_cogging.py
python/dg_blmc_robots/deprecated/dg_demos/solo/controllers/: dg_quad_bounding.py  dg_quad_climb_obstacle.py  dg_quad_com_lqr_planned_motion.py  dg_quad_go_to.py  (+6 more)
python/dg_blmc_robots/plot/: convert_dg_to_rai.py  filter_plot.py  qp_plotter.py
python/dg_blmc_robots/solo/: dg_bullet_solo.py  solo12_bullet.py  solo8_bullet.py  solo_base_bullet.py  solo_bullet.py
python/dg_blmc_robots/teststand/: calibration.py  teststand_bullet.py
python/dg_blmc_robots/teststand/leg_impedance_control/: quad_leg_impedance_controller.py
python/dg_blmc_robots/teststand/plot_teststand/: convert_all_dg_to_rai.py  convert_dg_to_rai.py  curve_fit.py  forceZ_vs_PosError.py  forceZ_vs_PosError_all.py  forceZ_vs_PosError_quasistatic.py  new_plotter.py  optimal_jump.py
python/dg_teststand/: calibration.py
python/leg_impedance_contol_new/: leg_impedance_controller.py  utils.py
python/leg_impedance_control/: control_manager_conf.py  controller.py  leg_impedance_controller.py  quad_leg_impedance_controller.py  traj_generators.py  utils.py
python/leg_impedance_control_old/: control_manager_conf.py  control_manager_single_motor_conf.py  controller.py  joint_pos_ctrl_gains.py  utils.py
python/plot/: plotter.py
python/plot_teststand/: convert_dg_to_rai.py  forceZ_vs_PosError.py  forceZ_vs_PosError_2legConfig.py  forceZ_vs_PosError_drop_with_damping.py  linear_regression.py  plotter.py
python/py_dg_blmc_robots/: pinbullet_wrapper.py  quadruped.py  stuggihop.py  teststand.py
rviz/: quadruped.rviz
scripts/: teststand_calibration  teststand_calibration.py
src/: CMakeLists.txt  dgm_quadruped.cpp  dgm_quadruped_simu.cpp  dgm_single_motor.cpp  dgm_solo.cpp  dgm_solo12.cpp  dgm_solo8.cpp  dgm_solo8ti.cpp  dgm_solo_simple_simu.cpp  dgm_stuggihop.cpp  dgm_test_bench.cpp  dgm_test_bench_8_motors.cpp  dgm_test_bench_8_motors_simu.cpp  dgm_teststand.cpp
src/config/: solo_simple_simu.yaml
src/dg_test_bench_8_motors/: dg_test_bench_8_motors.cpp
src/robot_executable/: solo.cpp  solo12.cpp  solo8.cpp  solo8ti.cpp  solo_simple_simu.cpp  stuggihop.cpp  teststand.cpp
src/test_bench_8_motors/: dgm_test_bench_8_motors.cpp  dgm_test_bench_8_motors.py  dgm_test_bench_8_motors_simu.cpp
srv/teststand/: TeststandCalibration.srv
(+32 files in other folders)
