<?xml version="1.0"?>
<package format="2">
  <name>dg_blmc_robots</name>
  <version>1.0.0</version>
  <description>
    This project implements a small example when using the dynamic graph
  </description>
  <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
  <license>BSD 3-CLause</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend> mpi_cmake_modules </depend>
  <depend> blmc_drivers </depend>
  <depend> blmc_robots </depend>
  <depend> pinocchio_bullet </depend>
  <depend> dynamic_graph_manager </depend>
  <depend> realtime_tools </depend>
  <depend> yaml_cpp_catkin </depend>

  <depend> robot_properties_solo </depend>
  <depend> robot_properties_teststand </depend>
  <depend> robot_properties_stuggihop </depend>

  <!-- Generate messages and services -->
  <depend>message_generation</depend>
  
</package>
