<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>dg_blmc_robots</name>
    <version>1.0.0</version>
    
    <description>
        Dynamic Graph Manager wrapper around the blmc_robots drivers.
    </description>

    <maintainer email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</maintainer>
    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

    <license>BSD-3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>mpi_cmake_modules</buildtool_depend>

    <!-- Run time dependencies. -->
    <depend>ament_index_cpp</depend>
    <depend>blmc_drivers</depend>
    <depend>blmc_robots</depend>
    <depend>dynamic_graph_manager</depend>
    <depend>yaml_utils</depend>
    <depend>mim_msgs</depend>
    
    <!-- Python dependencies. -->
    <depend>robot_properties_solo</depend>
    <depend>robot_properties_teststand</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>